--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cyber Sudoku Solver</title>
     <link rel="stylesheet" href="style.css">
+    <script src='https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js'></script>
 </head>
 <body>
 
@@ -17,6 +18,13 @@
             <button id="btn-confirm-import" class="btn-solve">LOAD DATA</button>
             <button id="btn-close-modal" class="btn-clear">CANCEL</button>
         </div>
+    </div>
+</div>
+
+<div id="loading-overlay" class="modal-overlay hidden">
+    <div class="loading-content">
+        <div class="spinner"></div>
+        <p id="loading-text">ANALYZING IMAGE...</p>
     </div>
 </div>
 
@@ -49,8 +57,14 @@
             </div>
             <div class="btn-row">
                 <button class="btn-action" id="btn-open-import">IMPORT TEXT</button>
-                <button class="btn-action" id="btn-check-sum">VERIFY SUMS</button>
+                <button class="btn-action" id="btn-image-upload">OCR IMAGE</button>
             </div>
+            
+            <div class="btn-row">
+                 <button class="btn-action" id="btn-check-sum" style="width:100%">VERIFY SUMS</button>
+            </div>
+
+            <input type="file" id="hidden-file-input" accept="image/*" style="display: none;">
         </div>
 
         <div class="panel console-window" id="console-log">
